--- a/app/src/main/res/layout/photos.xml
+++ b/app/src/main/res/layout/photos.xml
@@ -2,47 +2,72 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TableRow>
+
+    <TableRow android:layout_height="104dp">
+
         <ImageView
-            android:id="@+id/imgBike"
-            android:contentDescription="@string/txtDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/bike"
-            android:padding="15sp" />
+            android:id="@+id/imgTrainers"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:contentDescription="@string/imgDescription"
+            android:padding="15sp"
+            android:src="@drawable/trainers" />
+
         <TextView
             android:layout_width="600dp"
-            android:layout_height="wrap_content"
-            android:text="@string/txtBike"
-            android:textSize="30sp"/>
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="@string/trainersText"
+            android:textSize="30sp" />
     </TableRow>
     <TableRow>
         <ImageView
-            android:id="@+id/imgBarge"
-            android:contentDescription="@string/txtDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/barge"
+            android:id="@+id/imgClasses"
+            android:contentDescription="@string/imgDescription"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:src="@drawable/classes"
             android:padding="15sp" />
+
         <TextView
             android:layout_width="600dp"
-            android:layout_height="wrap_content"
-            android:text="@string/txtBarge"
-            android:textSize="30sp"/>
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/classesDesc"
+            android:textSize="30sp" />
     </TableRow>
     <TableRow>
         <ImageView
-            android:id="@+id/imgBudapest"
-            android:contentDescription="@string/txtDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/budapest"
+            android:id="@+id/imgWeights"
+            android:contentDescription="@string/imgDescription"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:src="@drawable/wieghts"
             android:padding="15sp" />
+
         <TextView
             android:layout_width="600dp"
-            android:layout_height="wrap_content"
-            android:text="@string/txtBudapest"
-            android:textSize="30sp"/>
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/weightsDesc"
+            android:textSize="30sp" />
     </TableRow>
+    <TableRow>
+        <ImageView
+            android:id="@+id/imgMachines"
+            android:contentDescription="@string/imgDescription"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:src="@drawable/machines"
+            android:padding="15sp" />
+
+        <TextView
+            android:layout_width="600dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/machinesDesc"
+            android:textSize="30sp" />
+    </TableRow>
+
 
 </TableLayout>
