--- a/app/src/main/res/layout/tour.xml
+++ b/app/src/main/res/layout/tour.xml
@@ -7,7 +7,7 @@
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/txtTitle"
+        android:text="@string/youth"
         android:textSize="50sp"
         android:paddingStart="50sp"
         android:paddingEnd="60sp" />
@@ -15,7 +15,23 @@
         android:id="@+id/txtInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/txtInfo"
+        android:text="@string/adult"
+        android:textSize="50sp"
+        android:paddingStart="40sp"
+        android:paddingEnd="40sp" />
+    <TextView
+        android:id="@+id/priceInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/family"
+        android:textSize="50sp"
+        android:paddingStart="40sp"
+        android:paddingEnd="40sp" />
+    <TextView
+        android:id="@+id/famPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/senior"
         android:textSize="50sp"
         android:paddingStart="40sp"
         android:paddingEnd="40sp" />
